--- a/css/estilos.css
+++ b/css/estilos.css
@@ -12,7 +12,9 @@ body{
   text-align: left;
   border: 1px solid #DDD;
   margin: 0 auto;
+
 }
 #container h1{
   font-size: 20px;
+  font-family: Courier;
 }
